--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +26,22 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.productList {
+  display: flex;
+  flex-direction: column;
+}
+
+.productCard {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+}
+
+.productTitle {
+  font-weight: bold;
+  
 }
 
 @keyframes App-logo-spin {
